--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,22 +2,28 @@ name: Generate snake graph
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # update tiap hari
+    - cron: "0 0 * * *"   # jalan tiap hari 00:00 UTC (~07:00 WIB)
   workflow_dispatch:
   push:
     branches: ["main"]
+
+permissions:
+  contents: write   # agar boleh push ke branch `output`
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Generate Snake
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: EnvRfli
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
